Fix: Spacing between tags and outside links

--- a/app/assets/stylesheets/styles/_events.scss
+++ b/app/assets/stylesheets/styles/_events.scss
@@ -117,6 +117,10 @@
     li { padding: 0; }
   }
 
+  .card-offsite-links {
+    margin-top: 2em;
+  }
+
   .card-shareable-links {
     margin-top: 2em;
     box-sizing: border-box;
